<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView style="@style/card"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/cardContent">
        <TextView
            style="@style/infoHighLightText"
            android:text = "@string/threads_title"
            />

        <LinearLayout
            style="@style/infoLayout">
            <TextView
                style="@style/infoText"
                android:text = "@string/cam_first"
                />
            <ImageView
                android:id = "@+id/cam_state_1"
                style="@style/icon"
                android:src="@drawable/state_ok"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/infoLayout">
            <TextView
                style="@style/infoText"
                android:text = "@string/cam_third"
                />
            <ImageView
                android:id = "@+id/cam_state_3"
                style="@style/icon"
                android:src="@drawable/state_warning"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/infoLayout">
            <TextView
                style="@style/infoText"
                android:text = "@string/cam_fourth"
                />
            <ImageView
                android:id = "@+id/cam_state_4"
                style="@style/icon"
                android:src="@drawable/state_error"
                />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>